--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -1,11 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
+
+
 {% load staticfiles %}
-<html>
-
-<head>
-  <link href="{% static "css/style.css" %}" rel="stylesheet" />
-</head>
-<body>
-
 
       <p>Hi there!</p>
       {{aaa}}
@@ -13,10 +10,9 @@
       {%if img %}
 
       <img src="{{img.url}}" alt="">
-      <img src="{% static "media/profile_images/add.png" %}" alt="">
-
+    
       {{img.url}}
       <hr>
       {% endif %}
-      </body>
-  </html>
+
+{% endblock content %}
