--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -1,18 +1,38 @@
-{% extends 'base.html' %}
-{% block content %}
 
-
+<!DOCTYPE html>
 {% load staticfiles %}
 
-      <p>Hi there!</p>
-      {{aaa}}
-      <p>It works!</p>
-      {%if img %}
+<html lang="en">
 
-      <img src="{{img.url}}" alt="">
-    
-      {{img.url}}
-      <hr>
-      {% endif %}
+<head>
+  <meta charset="UTF-8">
+	<title>Tulia | Web Page</title>
 
-{% endblock content %}
+  <link href="{% static "bootstrap-3.3.7/css/bootstrap.min.css" %}" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="{% static "css/fonts.css" %}">
+	<link rel="stylesheet"  href="{% static "css/estilosContacto.css" %}" >
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto|Roboto+Mono|Roboto+Slab' rel='stylesheet' type='text/css'>
+
+
+  <link href="{% static "css/style.css" %}" rel="stylesheet" />
+
+</head>
+<body>
+
+			
+<div style=" width: 100%; height :400px; background-size: cover; background-image: url('{% static 'imagenes/fondo_violeta.jpg' %}'); ">
+		<ul class="navIndex">
+				<li><a href="/registrate/">Regístrate </a></li>
+				<li><a href="#">|</a></li>
+					<li><a href="#"> Ingresa </a></li>
+		</ul><!-- Fin registro -->
+	
+
+
+
+</div>
+
+				<!-- <img class="img-responsive center-block" src= "{% static "imagenes/fondo_violeta.jpg" %}" align="left" alt=""> -->
+		
+			</body>
