--- a/lectur/lectur_app/templates/base.html
+++ b/lectur/lectur_app/templates/base.html
@@ -95,10 +95,9 @@ Destacados
 
 
 
-  <script src="{% static "bootstrap-3.3.7/js/bootstrap.min.js" %}"></script>
   <script src="{% static "js/jquery-1.12.2.min.js" %}"></script>
-	<script src="{% static "js/bootstrap.min.js" %}"></script>
-  <script src="{% static "js/main.js" %}"></script>
+  <script src="{% static "js/bootstrap.min.js" %}"></script>
+  <script src="{% static "js/app.js" %}"></script>
 </body>
 
 </html>
