--- a/lectur/static/css/estilosContacto.css
+++ b/lectur/static/css/estilosContacto.css
@@ -186,15 +186,25 @@ list-style-type: none;
  .seccion-seleccionada{
  border-bottom-style: solid;
  border-bottom-width: 5px;
- border-bottom-color: #3Ab8e0; 
+ /*border-bottom-color: #3Ab8e0;*/
+
+ border-bottom-color: #dea13f; 
  }
  .seccion-header{
   height: 60px;
   text-align: center;
   padding-top: 26px;
  }
+  .seccion-header a{
+color: white;
+  }
 
- /******************* Sección mis comunidadea ********************/
+  .seccion-header a:hover{
+    text-decoration: none;
+    color: #dea13f; 
+  }
+
+ /******************* Sección mis comunidades ********************/
  .sobre-imagenes{
   padding: 0px 1%; 
   margin-top: 30px;
@@ -203,12 +213,43 @@ list-style-type: none;
 .sobre-imagen{
  position: absolute; 
  bottom: 0px; 
- background-color: rgba(122,1,119,0.6);
+  background-color: rgba(27,18,57,0.7);
  color: white;width: 94%; 
  height: 100px; 
  padding: 0px 8px; 
   }
 
+/******************* Seccion actividades ********************/
+.seccion-actividad{
+  padding: 25px;
+   margin-top: 5px;
+   color: white;
+   margin-bottom: 5px;
+  }
+
+.texto-actividad{
+  font-family: roboto;
+  color:red;
+  font-size:17px;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+.imagen-actividad{
+  width: 100%;
+  padding-top: 100%;
+  background-color: pink;
+  background-position: center; background-size: cover; 
+
+}
+.no-padding{
+  padding: 0px;
+}
+
+.texto-medio-acti{
+  padding-left: 13px;
+  padding-top: 10px;
+}
 
  /******************* Sección mis comunidades ********************/
  .submenu-comuni{
@@ -232,7 +273,7 @@ list-style-type: none;
 
  .comunidad-fondo{
   text-align: center;
-  min-height: 400px;
+  min-height: 270px;
   background-size: cover;
   background-position: center;
   padding-top: 100px;
@@ -246,9 +287,25 @@ list-style-type: none;
   display: inline-block;
  }
 
- .boton-comunidad{
+.boton-comunidad{
   color:white;
-  font-family:roboto; 
+  font-family:roboto;
+  font-weight:bolder;
+  font-size: 14px;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+  margin-left: 5px; 
+  background-color: rgb(222,161,63);
+  padding: 5px;
+  border-left-style: solid;
+  border-left-width: 3px;
+  border-left-color: white;
+  box-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+ }
+ .boton-comunidad:hover{
+  color:white;
+  text-decoration: none;
+
+  background-color: rgb(181,43,45);  
  }
 
 .franja-comunidad{
@@ -270,10 +327,30 @@ padding-top: 100%;
 background-size: cover;
 background-position: center;
 }
-.redondo
-{
-border-radius: 50%;}
+.redondo{
+border-radius: 50%;
+}
+.circulo-perfil-borde{
+  padding: 10px; border-color: #1b1239; border-style: solid; border-width: 5px;
 
+}
+
+.circulo-perfil-admin{
+  background-color: #3Ab8e0; position: absolute; bottom: 20%; right: 5%; padding: 8px; color: white;
+}
+
+.contenedor-perfil{
+  margin-top: 20px; 
+  position: relative;
+}
+
+.nombre-usuario{
+  text-align: center; 
+  font-size: 17px; 
+  font-family: 'roboto'; 
+  color: #1b1239;
+  margin-top: 5px;
+}
 
 /******************** Registro ********************/
 .navR li {
@@ -318,22 +395,55 @@ border-radius: 50%;}
      text-align: center;
    }
 
-.elemento_formulario{
-  width:50%;
+.header-formulario{
+font-family: "roboto";
+margin-bottom: 20px;
+  } 
 
+h3.header-formulario{
+color: red;
+}
+h4.header-formulario{
+  color: blue;
+}
+.elemento_formulario{
+  width:100%;
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
+  font-family: "roboto";
 }
 
+.boton-formulario{
+
+  text-decoration: none !important;
+  color: white !important;
+  font-family:"roboto";
+  font-size: 17px;
+  background-color: #1A98B0;
+  padding: 8px  15px;
+  margin-top: 10px;
+}
+
+.boton-formulario:hover{
+  background-color: #3Ab8e0;
+
+ }
 .cregistro { /*Caracteristicas registro*/
 
 	padding-right: 15em;
 }
 
-.elemento_formulario input[type="text"]{
+.elemento_formulario input[type="text"],.elemento_formulario input[type="password"], .elemento_formulario input[type="email"]{
   width: 100%;
+  padding-left: 5px;
 
+}
+.campo-incorrecto{
+  background-color: red;
+}
+.campo-correcto{
+  background-color: green;
 }
 
 .campo {
