--- a/lectur/lectur_app/templates/comunidad_vista_min.html
+++ b/lectur/lectur_app/templates/comunidad_vista_min.html
@@ -1,9 +1,9 @@
 
 <a href="/comunidades/{{comunidad.slug}}">
 <div class="col-md-4 sobre-imagenes">
-	<div style=" height: 250px;  background-size: cover;  background-image: url('{{comunidad.imagen.url}}');">
-		<div class="sobre-imagen">
-			<h3>{{comunidad.nombre}}</h3>
+	<div style=" height: 250px;  background-size: cover;  /*background-image: url('{{comunidad.imagen.url}}');*/ background-color:#187774;">
+		<div class="sobre-imagen  comunidades"  style= "font-family:'Libre Franklin';">
+			<h3 >{{comunidad.nombre}}</h3>
 			<p>{{comunidad.descripcion}} </p>
 		</div>
 	</div>		
