--- a/lectur/lectur_app/templates/lector_vista_min.html
+++ b/lectur/lectur_app/templates/lector_vista_min.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
 
 <div class="col-md-2 contenedor-perfil">
+<a href="/perfil/{{lector.user.username}}" title ="{{lector.user.first_name}} {{lector.user.last_name}}" align="center">
+
 		<div class="redondo circulo-perfil-borde">
 			<div class="circulo-perfil redondo" style="background-image: url('{{lector.imagen.url}}'); ">
 			</div>
@@ -9,5 +11,7 @@
 		{% if isAdmin %}
 		<div class="redondo circulo-perfil-admin"> <i class="fa fa-key">	</i></div>
 		{% endif %}
-		<div class="nombre-usuario">{{lector.user.first_name}} {{lector.user.last_name}}</div>
+
+		
+		<div class="nombre-usuario">{{lector.user.first_name}} {{lector.user.last_name}}</div>	</a>
 	</div>
