--- a/lectur/lectur_app/templates/vista_informacion_comunidad.html
+++ b/lectur/lectur_app/templates/vista_informacion_comunidad.html
@@ -1,11 +1,105 @@
 {% load staticfiles %}
 
- <div class="col-md-8">
- 	
-<p><strong>Nombre de la comunidad:</strong> {{comunidad.nombre}} </p>
+<div class="col-md-8 col-md-offset-2 col-xs-12 col-xs-offset-0 texto-par-dos ">
+	<div class="row">
+		<div class="comunidad-fondo" style="position: relative; background-image: url('{{comunidad.imagen.url}}');"></div>
+	</div>
 
-<p>Envía un mensaje a la persona encargada de la comunidad:</p>
+	<div class="row">
+		<div class="col-md-12">
+			<h1>¿Quiénes Somos?</h1>
+			<p>{{comunidad.descripcion}} </p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+
+			<p>CONTACTO</p>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4 col-xs-12">
+				<span>Teléfono: <br> 3108491453 </span>
+			</div>
+
+			<div class="col-md-4 col-xs-12">
+				<span>Correo electrónico: <br> tina-hoyos@hotmail.com</span>
+
+			</div>
+
+			<div class="col-md-4 col-xs-12">
+				<span>REDES SOCIALES <br>
+					<i class="fa fa-facebook"></i> 
+					<i class="fa fa-twitter"></i> 
+					<i class="fa fa-skype"></i> 
+					<i class="fa fa-tumblr"></i>
+				</span>
+
+			</div>
+
+
+		</div>
+
+	</div>
+
+
+	<br><br>
+	<p>ENVIA UN MENSAJE</p>
+
+	<!-- espacio nombre -->
+	<div class="row">
+
+		<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
+
+			<div class="row campo texto-par-dos">
+				<span ><b>Nombre: </b></span><br>
+				<span><input   class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="nombre" placeholder="Nombre"></span>
+			</div><!-- fin espacio nombre -->
+			<!-- espacio email -->
+			<div class="row campo texto-par-dos">
+				<span ><b>Email: </b></span><br>
+				<span><input type="text" class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" size="30" maxlength="30" name="email" placeholder="Email"></span>
+			</div><!-- fin espacio email -->
+
+			<!-- espacio asunto-->
+			<div class="row campo texto-par-dos">
+				<span ><b>Asunto: </b></span><br>
+				<span><input class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="asunto" placeholder="Asunto" ></span>
+			</div><!-- fin espacio asunto -->
+		</div>
 
 
 
- </div>
+
+		<div class="col-xs-6 col-md-6 col-xs-12 col-sm-12 col-xs-offset-1 col-md-offset-1 col-xs-offset-1 col-sm-offset-1">
+
+			<!-- espacio mensaje -->
+			<div class="row campo texto-par-dos">
+				<span  ><b>Mensaje: </b></span><br>
+				<span><textarea name="comentarios"  class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" rows="8" cols="32" placeholder="Mensaje"></textarea></span>
+			</div><!-- fin espacio mensaje -->
+
+			<!-- Boton enviar mensaje -->
+<div class="" style="margin-top: 15px; margin-bottom: 30px;" align="right">
+					<a href="" class="boton-actividad" >
+						
+						Enviar
+
+					</a>
+				</div>
+
+			<!-- fin espacio enviar mensaje -->
+
+		</div>
+		<!-- final formulario mensaje -->
+	</div>
+
+
+
+
+
+
+
+
+</div>
